styles.css
body {
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    background-color: #f7f7f7;
    font-family: 'pixelated', sans-serif;
}

canvas {
    border: none;
    animation: scrollGround 5s linear infinite; /* Adjust animation duration as needed */
    background-image: url('assets/ground_texture.png');
    background-repeat: repeat-x;
    background-position: 0 bottom;
}

#gameContainer {
    position: relative;
}

#score {
    position: absolute;
    top: 10px;
    right: 10px;
    font-size: 15px;
    color: black; /* Optional: Set color for better visibility */
}

#gameOverScreen {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    background-color: rgba(0, 0, 0, 0);
    padding: 20px;
    color: white;
    display: none; /* Initially hidden */
}

@font-face {
    font-family: 'pixelated';
    src: url('assets/pixelated.ttf') format('truetype');
    font-weight: 400;
    font-style: normal;
}

#titleImage {
    position: absolute;
    top: 250px; /* Adjust the top distance to position the title image directly above the canvas */
    left: 50%;
    transform: translateX(-50%);
    z-index: 1; /* Ensure the title image appears above other elements */
}

#titleImage img {
    width: 200px; /* Adjust the width of the title image */
    height: auto; /* Maintain aspect ratio */
}

